syntax = "proto3";
package proto;

import "google/api/annotations.proto";

service BusinessService {
    rpc Get(GetBusinessRequest) returns (Business) {
        option (google.api.http) = {
            get: "/businesses/{id}"
        };
    }

    rpc List(ListBusinessesRequest) returns (ListBusinessesResponse) {
        option (google.api.http) = {
            get: "/businesses"
        };
    }
}

message Business {
    message AddressDetails {
        string address_line_1 = 1;
        string address_line_2 = 2;
        string city = 3;
        string state = 4;
        string postal_code = 5;
    }

    string id = 1;
    string display_name = 2;
    string display_address = 3;
    AddressDetails address_details = 4;
}

message GetBusinessRequest {
    string id = 1;
}

message ListBusinessesRequest {
}
message ListBusinessesResponse {
    repeated Business businesses = 1;
}
